# car-repairs-analysis

./: Analysis.ipynb  README.md  pyproject.toml  results.csv
data/: ALFA-ROMEO.csv  AUDI.csv  BMW.csv  Citroen.csv  FIAT.csv  Ford.csv  Honda.csv  Hyundai.csv  Kia.csv  Lexus.csv  MAZDA.csv  MINI.csv  Mercedes.csv  Mitsubishi.csv  Nissan.csv  Peugeot.csv  Renault.csv  SMART.csv  SUBARU.csv  SUZUKI.csv  Saab.csv  Seat.csv  Skoda.csv  TESLA.csv  Toyota.csv  VOLKSWAGEN.csv  Vauxhall.csv  Volvo.csv
src/: main.py
