[tool.poetry]
name = "warranty-wise-dataset"
version = "0.1.0"
description = ""
authors = ["Šarūnas Navickas <zaibacu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
ipykernel = "^6.6.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
